# DEDS_Portfolio

./: README.md  Script.ipynb  pyproject.toml
src/deds_opdracht 1.2-1.3/: DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
src/deds_opdracht 1b/: DEDS_WC_1.1b_Opdrachten(1).ipynb
src/deds_opdracht 2.2-2.3/: DEDS2.2-2..3.ipynb
src/deds_opdracht1a/: DEDS_WC_1.1a_Opdrachten.ipynb
src/opdracht 1.2 en 1.3/: DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
src/opdracht 1a/: DEDS_WC_1.1a_Opdrachten.ipynb
src/opdracht 1b/: DEDS_WC_1.1b_Opdrachten.ipynb
src/opdracht 2.2 en 2.3/: DEDS-2.2en2.3.ipynb
src/opdracht 3.2 en 3.3/: DEDS-3.2en3.3.ipynb
